# hyphora-local

./: .gitignore  CLAUDE.md  README.md  hyphora.toml  pyproject.toml  pyrightconfig.json  run_mcp_server.py
.claude/: settings.json
.hyphora/: .gitignore  hyphora.toml
hyphora-vault/: Candidate Seed Selection.md  Hyphora CLI.md  Hyphora Context Retrieval Engine.md  Hyphora Database.md  Hyphora Metadata.md  Hyphora Vault Updates.md
hyphora-vault-test/: access-control.md  activity-feeds.md  advanced-persistent-threat-protection.md  api-gateway.md  api-security.md  audit-logs.md  automated-workflows.md  biometric-authentication.md  blockchain-audit-trail.md  change-management.md  collabvault-overview.md  compliance-engine.md  compliance-framework.md  compliance-reporting.md  containerization-security.md  content-analytics.md  content-moderation.md  continuous-compliance-monitoring.md  cross-border-data-transfer.md  data-anonymization.md  data-classification.md  data-governance.md  data-loss-prevention.md  data-residency.md  data-retention-policy.md  digital-forensics.md  disaster-recovery.md  document-retention-automation.md  encryption-key-management.md  end-to-end-encryption.md  enterprise-search.md  evidence-preservation.md  federated-search.md  file-storage.md  guest-sharing.md  incident-response.md  insider-threat-detection.md  integration-connectors.md  knowledge-graph.md  legal-hold.md  (+30 more)
migrations/: 20250711173429_init.py
src/hyphora_local/: __init__.py  cli.py  config.py  graph.py  graph_walk.py  mmr.py  search.py  server.py  sync.py
